Support Modulize Change Kefjs to 0.8.0-K2

--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,14 @@ buildscript {
 }
 
 group 'party.liyin.test'
-version '072'
+version '081'
 
 apply plugin: 'kotlin2js'
 
 repositories {
+    maven {
+        url 'D:\\Development\\WorkSpace\\GitSpace\\cubesky-mvn.github.io'
+    }
     maven {
         url 'https://cubesky-mvn.github.io'
     }
