--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.31'
+    ext.kotlin_version = '1.2.41'
 
     repositories {
         mavenCentral()
@@ -26,6 +26,6 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-js:$kotlin_version"
-    compile "party.liyin:kefjs:0.7.2-K5"
+    compile 'party.liyin:kefjs:0.8.1-K3'
     testCompile "org.jetbrains.kotlin:kotlin-test-js:$kotlin_version"
 }
